--- a/config
+++ b/config
@@ -1,3 +1,5 @@
 ngx_addon_name=ngx_http_webapp_module
 HTTP_MODULES="$HTTP_MODULES ngx_http_webapp_module"
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_webapp_module.c"
+CORE_INCS="$CORE_INCS /usr/include/mysql"
+CORE_LIBS="$CORE_LIBS -L/usr/lib64/mysql -lmysqlclient"
